--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -177,17 +177,12 @@ section div.articles article {
 	box-sizing: border-box;
 	box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
 	position: relative;
-	padding: 180px 0.5em 3.5em 0.5em;
+	padding: 50vw 0.5em 3.5em 0.5em;
 	margin-bottom: 2em;
 }
 
 section div.articles article p {
 	margin: 0;
-}
-
-section div.articles article h3 {
-	margin: 0;
-	padding: 0.5em 0;
 }
 
 section div.articles article img {
