--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -20,6 +20,10 @@ body {
 	font-family: "open_sans", "railway", Arial, serif;
 }
 
+p {
+	color: @color_text;
+}
+
 h1,h2,h3 {
 	font-family: "railway", Arial, serif;
 }
